--- a/app/boards/arm/superuser/superuser_rev1.dts
+++ b/app/boards/arm/superuser/superuser_rev1.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020 The ZMK Contributors
+ * Copyright (c) 2025 Kalyan Sriram
  *
  * SPDX-License-Identifier: MIT
  */
@@ -28,8 +28,6 @@
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
         diode-direction = "col2row";
-        /* debounce-press-ms = <0>; */
-        /* debounce-release-ms = <0>; */
         poll-period-ms = <2>;
         row-gpios
             = <&gpiob 7  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
@@ -58,20 +56,6 @@
             ;
     };
 
-    /// encoder: encoder {
-    ///     compatible = "alps,ec11";
-    ///     a-gpios = <&gpiob 12 GPIO_PULL_UP>;
-    ///     b-gpios = <&gpiob 13 GPIO_PULL_UP>;
-    ///     steps = <80>;
-    ///     status = "disabled";
-    /// };
-    ///
-    /// sensors: sensors {
-    ///     compatible = "zmk,keymap-sensors";
-    ///     sensors = <&encoder>;
-    ///     triggers-per-rotation = <20>;
-    /// };
-    
     physical_layout0: physical_layout0 {
         compatible = "zmk,physical-layout";
         display-name = "Default Layout";
@@ -208,43 +192,6 @@ zephyr_udc0: &usbotg_fs {
         compatible = "fixed-partitions";
         #address-cells = <1>;
         #size-cells = <1>;
-
-        /* boot_partition: partition@0 { */
-        /*     label = "mcuboot"; */
-        /*     reg = <0x00000000 DT_SIZE_K(48)>; */
-        /* }; */
-        /**/
-        /* storage_partition: partition@c000 { */
-        /*     label = "storage"; */
-        /*     reg = <DT_SIZE_K(48) DT_SIZE_K(16)>; */
-        /* }; */
-
-        /* slot0_partition: partition@10000 { */
-        /*     label = "image-0"; */
-        /*     reg = <DT_SIZE_K(64) DT_SIZE_K(128)>; */
-        /* }; */
-        /**/
-        /* slot1_partition: partition@30000 { */
-        /*     label = "image-1"; */
-        /*     reg = <DT_SIZE_K(196) DT_SIZE_K(128)>; */
-        /* }; */
-
-        /* code_partition: partition@0 { */
-        /*     label = "zmk"; */
-        /*     reg = <0x00000000 DT_SIZE_K(256)>; */
-        /* }; */
-
-
-        /* Set 32Kb of storage at the start of the 512Kb of flash */
-        /* storage_partition: partition@0 { */
-        /*     label = "storage"; */
-        /*     reg = <0x00000000 DT_SIZE_K(32)>; */
-        /* }; */
-        /**/
-        /* code_partition: partition@8000 { */
-        /*     label = "zmk"; */
-        /*     reg = <DT_SIZE_K(32) DT_SIZE_K(480)>; */
-        /* }; */
     };
 };
 
